deploy/kustomize/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydjangowebsite-staging
  labels:
    app: mydjangowebsite-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydjangowebsite-staging
  template:
    metadata:
      labels:
        app: mydjangowebsite-staging
    spec:
      volumes:
        - name: mydjangowebsite-nginx-conf
          configMap:
            name: mydjangowebsite-nginx-conf
            items:
            - key: "nginx-conf"
              path: "nginx.conf"
        - name: socks-volume
          emptyDir: {}
        - name: log
          emptyDir: {}
        - name: staticfiles-volume
          emptyDir: {}

      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: mydjangowebsite-nginx-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
            readOnly: true
          - name: log
            mountPath: /var/log/nginx
          - name: staticfiles-volume
            mountPath: "/django_app/app/static"

      - name: django-app
        image: marcoinacio/mydjangowebsite
        command: ["/bin/bash"]
        args:
          - -c
          - >-
              cd /django_app/app &&
              poetry run python manage.py migrate &&
              poetry run python manage.py collectstatic --noinput &&
              poetry run gunicorn mywebsite.wsgi --log-file - -b unix:/socks_volume/gunicorn.sock
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: staticfiles-volume
            mountPath: "/django_app/app/static"
