deploy/kustomize/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydjangowebsite-staging
spec:
  type: ClusterIP
  selector:
    app: mydjangowebsite-staging
  ports:
  - name: http
    protocol: TCP
    port: 80
